fix: archive item overflow

--- a/website/src/components/archive/Archive.module.css
+++ b/website/src/components/archive/Archive.module.css
@@ -30,6 +30,7 @@
   height: 100%;
   padding: 40px 20px;
   border-left: 2px solid black;
+  overflow-y: auto;
 }
 
 .title {
@@ -47,4 +48,12 @@
   line-height: 1em;
   text-transform: none;
   padding: 0px 20px;
+}
+
+.social {
+  display: flex;
+  justify-content: space-evenly;
+  font-size: 60px;
+  margin-top: 20px;
+  filter: drop-shadow(2px 2px 0px var(--color-primary));
 }
